WebCore: Fix for <rdar://problem/6925121> SAP: Wrong width calculation in table with fixed layout -and corresponding- https://bugs.webkit.org/show_bug.cgi?id=29501

Reviewed by Dave Hyatt.

New Tests:
* fast/table/fixed-table-with-percent-inside-percent-table.html: Added.
* fast/table/fixed-table-with-percent-width-inside-auto-table.html: Added.
* fast/table/fixed-table-with-percent-width-inside-div.html: Added.
* fast/table/fixed-table-with-percent-width-inside-extra-large-div.html: Added.
* fast/table/fixed-table-with-percent-width-inside-fixed-width-table.html: Added.
* fast/table/fixed-table-with-small-percent-width.html: Added.

This new quirk is very similar to an existing one that was
implemented in revision 4316.
* rendering/FixedTableLayout.cpp:
(WebCore::FixedTableLayout::calcPrefWidths):

LayoutTests: Tests for <rdar://problem/6925121> SAP: Wrong width calculation in
table with fixed layout
-and corresponding-
https://bugs.webkit.org/show_bug.cgi?id=29501

Reviewed by Dave Hyatt.

* fast/table/fixed-table-with-percent-inside-percent-table.html: Added.
* fast/table/fixed-table-with-percent-width-inside-auto-table.html: Added.
* fast/table/fixed-table-with-percent-width-inside-div.html: Added.
* fast/table/fixed-table-with-percent-width-inside-extra-large-div.html: Added.
* fast/table/fixed-table-with-percent-width-inside-fixed-width-table.html: Added.
* fast/table/fixed-table-with-small-percent-width.html: Added.
* platform/mac/fast/table/fixed-table-with-percent-inside-percent-table-expected.checksum: Added.
* platform/mac/fast/table/fixed-table-with-percent-inside-percent-table-expected.png: Added.
* platform/mac/fast/table/fixed-table-with-percent-inside-percent-table-expected.txt: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-auto-table-expected.checksum: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-auto-table-expected.png: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-auto-table-expected.txt: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-div-expected.checksum: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-div-expected.png: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-div-expected.txt: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-extra-large-div-expected.checksum: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-extra-large-div-expected.png: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-extra-large-div-expected.txt: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-fixed-width-table-expected.checksum: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-fixed-width-table-expected.png: Added.
* platform/mac/fast/table/fixed-table-with-percent-width-inside-fixed-width-table-expected.txt: Added.
* platform/mac/fast/table/fixed-table-with-small-percent-width-expected.checksum: Added.
* platform/mac/fast/table/fixed-table-with-small-percent-width-expected.png: Added.
* platform/mac/fast/table/fixed-table-with-small-percent-width-expected.txt: Added.

New and improved results for this test.
* platform/mac/tables/mozilla/bugs/bug34176-expected.checksum:
* platform/mac/tables/mozilla/bugs/bug34176-expected.png:
* platform/mac/tables/mozilla/bugs/bug34176-expected.txt:



Canonical link: https://commits.webkit.org/40210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48647 268f45cc-cd09-0410-ab3c-d52691b4dbfc